Thu Jun 24 18:13:35 PDT 1999 Manish Singh <yosh@gimp.org>

	* plug-ins/common/mkgen.pl
	* plug-ins/common/Makefile.am: added a pattern rule to install
	single plugins

	* all plugin Makefiles: use $libexecdir instead of $pluginlibdir
	so we get installed on make install-exec

	* plug-ins/gap/gap_filter_iterators.c: removed old Colorify_iter_ALT
	reference

Thu Jun 24 22:49:41 BST 1999 Andy Thomas <alt@gimp.org>

	* layers_dialog.c
	* lc_dialog.c
	* lc_dialogP.h

	L&C&P previews are now updated on undo and layer movement
	operations.

Thu Jun 24 22:34:54 MEST 1999 Sven Neumann <sven@gimp.org>

	* plug-ins/gap: some changes on request by the author Wolfgang Hofer
        * plug-ins/common/colorify.c: make it work on drawables with alpha 
	channel  

Wed Jun 23 17:55:58 PDT 1999 Manish Singh <yosh@gimp.org>

	* more makefile fixes

Wed Jun 23 23:52:54 BST 1999 Andy Thomas <alt@gimp.org>

	* gimp/app/gimppreviewcache.c  	
	* gimp/app/gimppreviewcache.h  	
	* gimp/app/drawable_cmds.c  	
	* gimp/app/gdisplay.c  		
	* gimp/app/gimpdrawableP.h 	
	* gimp/app/gimage_cmds.c
	* gimp/app/Makefile.am 		
	* gimp/app/layers_dialog.c 	
	* gimp/app/channel.c 		
	* gimp/app/lc_dialog.c 		
	* gimp/app/lc_dialog.h 		
	* gimp/app/lc_dialogP.h 		
	* gimp/app/layer.c 		
	* gimp/app/gimpdrawable.c 	
	* gimp/app/internal_procs.c
	* gimp/libgimp/gimp.h 		
	* gimp/libgimp/gimpimage.c 	
	* gimp/libgimp/gimpdrawable.c 	
	* gimp/libgimp/gimpmenu.c 	
	* gimp/tools/pdbgen/pdb/drawable.pdb
	* gimp/tools/pdbgen/pdb/gimage.pdb

	Added thumbnail image preview functions. 
	Previews are visible on the L&C&P dialogs as well as in the 
	drawables/channels/ menus generated for plugins 
	(see the bumpmap & Mapobject plugins). 

	PDB interface exists to simply extract a thumbnail preview 
	of a given size. This is much quicker & more efficient
	than getting the image data tile-by-tile if you only need a small
	image since a "preview cache" has been implemented. This cache also